[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NIPY"
authors = [{name = "duozhu"}]

dependencies = [
    "cryptography>=37.0.4",
    "secp256k1>=0.14.0",
    "websocket-client>=1.3.3",
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/duozhutuan/NIPY"

[tool.setuptools]
packages = ["NIPY"] 
